# kmeaaaaans

./: .gitignore  LICENSE  README.md  README.md.template  go.mod  go.sum  kmeaaaaans.go  kmeaaaaans_test.go  lloyd.go  minibatch.go  procs.go  trained.go  vanila.go
.github/workflows/: update_readme.yml
benchmark/: Makefile  eval.py  main.py  make_report.py  pyproject.toml
benchmark/scikit-learn/: main.py
cmd/kmeaaaaans/: main.go
cmd/tmp/: main.go
